# lsr

./: Cargo.toml
.github/worflows/: develop.yml  release.yml  test.yml
.github/workflows/: develop.yml  pr.yml  release.yml  test.yml
scripts/: install.ps1  install.sh
src/: lib.rs
src/cli/: main.rs
src/core/: hello.rs  mod.rs
tests/: lib_test.rs
