[package]
name = "lsrs"
version = "0.1.0"
edition = "2024"
authors = ["Mohammed, Amrani amranimohamad040@gmail.com"]
description = "A hello world CLI tool with Rust and Node.js bindings"
license = "MIT"
repository = "https://github.com/MohammedElMO/lsrs"
keywords = ["cli","npm", "rust", "napi"]

# This is crucial - cdylib for Node.js, rlib for Rust crates
[lib]
name = "lsr"
path = "src/lib.rs"

# CLI binary
[[bin]]
name = "lsr"
path = "src/cli/main.rs"

[dependencies]
clap = { version = "4.5.45", features = ["derive"] }


# Make sure the binary is installable via cargo install
[package.metadata.docs.rs]
all-features = true