[package]
name = "lsrs"
version = "0.1.3"
edition = "2024"
authors = ["Mohammed, Amrani amranimohamad040@gmail.com"]
description = "CLI tool written in Rust that will replace ls written in C instroducing lsrs "
license = "MIT"
repository = "https://github.com/MohammedElMO/lsrs"
keywords = ["cli", "npm", "rust", "napi", "ls"]

# This is crucial - cdylib for Node.js, rlib for Rust crates
[lib]
name = "lsrs"
path = "src/lib.rs"

# CLI binary
[[bin]]
name = "lsrs"
path = "src/cli/main.rs"

[dependencies]
clap = { version = "4.5.45", features = ["derive"] }


# Make sure the binary is installable via cargo install
[package.metadata.docs.rs]
all-features = true